--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
     "sal.js": "^0.8.5",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.7"
