--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_soufiane",
-  "homepage": "https://Oumbarek-Soufiane.github.io/portfolio",
+  "homepage": "https://Oumbarek-Soufiane.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
